tests/expected_invalid_foreign_integer_literals.diag.out
<input>:3:5: error: integer literal cannot type as CInt outside a boundary or hazard module
        1
        ^
<input>:7:5: error: integer literal cannot type as CSize outside a boundary or hazard module
        2
        ^
<input>:13:5: error: integer literal cannot type as CInt outside a boundary or hazard module
        3
        ^
<input>:19:5: error: integer literal '2147483648' is outside the CInt range
        2147483648
        ^^^^^^^^^^
<input>:23:5: error: integer literal '18446744073709551616' is outside the CSize range
        18446744073709551616
        ^^^^^^^^^^^^^^^^^^^^
<input>:29:5: error: integer literal '2147483648' is outside the CInt range
        2147483648
        ^^^^^^^^^^
